[package]
name = "rust_cockroach_db_example_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.41"
postgres = "0.19.4"
postgres-openssl = "0.5.0"
postgres-types = { version = "0.2.4", features = ["derive"] }